Fix relative imports

--- a/notebooks/preprocess_and_baseline.ipynb
+++ b/notebooks/preprocess_and_baseline.ipynb
@@ -2,47 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'entity_disambiguation'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-8f33bd040958>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mentity_disambiguation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpreprocessing\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mprocess_input\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'entity_disambiguation'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "# Add directory above current directory to path so we can import our pre-built package\n",
+    "import sys; sys.path.insert(0, '..')\n",
     "from entity_disambiguation.preprocessing import process_input"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LICENSE               \u001b[34membeddings\u001b[m\u001b[m            pyproject.toml\r\n",
-      "README.md             \u001b[34mentity_disambiguation\u001b[m\u001b[m pytest.ini\r\n",
-      "README.rst            \u001b[34mnotebooks\u001b[m\u001b[m             \u001b[34msubmissions\u001b[m\u001b[m\r\n",
-      "\u001b[34mdata\u001b[m\u001b[m                  poetry.lock           \u001b[34mtests\u001b[m\u001b[m\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!ls .."
    ]
   },
   {
@@ -54,19 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "#first specify the directory that the ACY dataset lives in on your local machine\n",
-    "mydir = '../../aida-conll-yago-dataset/'\n",
+    "mydir = '../data/aida-conll-yago-dataset/'\n",
     "#you could specify your own train-test-split percentage, here the default is 80%\n",
     "train_x, train_y, test_x, test_y = process_input(mydir, train = 0.8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +105,7 @@
        "4  commission                      0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -288,16 +260,16 @@
        "4             460156                 5288  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "my_path = '../../kwnlp/'\n",
+    "my_path = '../data/kwnlp/'\n",
     "article_df = pd.read_csv(os.path.join(my_path, 'article.csv'))\n",
     "\n",
-    "anchor_df = pd.read_csv(os.path.join(my_path, 'anchor_target_counts.csv'))\n",
+    "anchor_df = pd.read_csv(os.path.join(my_path, 'anchor-target-counts.csv'))\n",
     "\n",
     "at_count_df = anchor_df.copy()\n",
     "def text_normalizer(text):                              \n",
@@ -332,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +411,7 @@
        "6549418    Plastic_welding               1602                    1  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
