Add demos directory

--- a/notebooks/demos/preprocess_and_baseline.ipynb
+++ b/notebooks/demos/preprocess_and_baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Add directory above current directory to path so we can import our pre-built package\n",
-    "import sys; sys.path.insert(0, '..')\n",
+    "import sys; sys.path.insert(0, '../..')\n",
     "from entity_disambiguation.preprocessing import process_input"
    ]
   },
@@ -26,19 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#first specify the directory that the ACY dataset lives in on your local machine\n",
-    "mydir = '../data/aida-conll-yago-dataset/'\n",
+    "mydir = '../../data/aida-conll-yago-dataset/'\n",
     "#you could specify your own train-test-split percentage, here the default is 80%\n",
     "train_x, train_y, test_x, test_y = process_input(mydir, train = 0.8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "4  commission                      0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -260,13 +260,13 @@
        "4             460156                 5288  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "my_path = '../data/kwnlp/'\n",
+    "my_path = '../../data/kwnlp/'\n",
     "article_df = pd.read_csv(os.path.join(my_path, 'article.csv'))\n",
     "\n",
     "anchor_df = pd.read_csv(os.path.join(my_path, 'anchor-target-counts.csv'))\n",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "6549418    Plastic_welding               1602                    1  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
