Rerun notebooks and consolidate directories (#13)
* Add data folder for consistency

* Add embeddings directory

* Rerun and consolidate notebooks

* Add Dask

* Consolidate notebooks

* Fix relative imports

* Add demos directory

--- a/notebooks/demos/preprocess_and_baseline.ipynb
+++ b/notebooks/demos/preprocess_and_baseline.ipynb
@@ -2,15 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from preprocessing import *"
+    "# Add directory above current directory to path so we can import our pre-built package\n",
+    "import sys; sys.path.insert(0, '../..')\n",
+    "from entity_disambiguation.preprocessing import process_input"
    ]
   },
   {
@@ -22,19 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#first specify the directory that the ACY dataset lives in on your local machine\n",
-    "mydir = '../../aida-conll-yago-dataset/'\n",
+    "mydir = '../../data/aida-conll-yago-dataset/'\n",
     "#you could specify your own train-test-split percentage, here the default is 80%\n",
     "train_x, train_y, test_x, test_y = process_input(mydir, train = 0.8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +105,7 @@
        "4  commission                      0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -256,16 +260,16 @@
        "4             460156                 5288  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "my_path = '../../kwnlp/'\n",
+    "my_path = '../../data/kwnlp/'\n",
     "article_df = pd.read_csv(os.path.join(my_path, 'article.csv'))\n",
     "\n",
-    "anchor_df = pd.read_csv(os.path.join(my_path, 'anchor_target_counts.csv'))\n",
+    "anchor_df = pd.read_csv(os.path.join(my_path, 'anchor-target-counts.csv'))\n",
     "\n",
     "at_count_df = anchor_df.copy()\n",
     "def text_normalizer(text):                              \n",
@@ -435,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
