Implement basic pipeline

--- a/notebooks/baselines/baseline_anchor_stats.ipynb
+++ b/notebooks/baselines/baseline_anchor_stats.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import dask.dataframe as dd\n",
+    "#import dask.dataframe as dd\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "%matplotlib inline\n",
@@ -842,8 +842,6 @@
    "outputs": [],
    "source": [
     "import csv\n",
-    "# df_acy = dd.read_csv('../../aida-conll-yago-dataset/AIDA-YAGO2-DATASET.tsv', sep='\\t',dtype='object').compute()\n",
-    "# res = df.infer_objects()\n",
     "\n",
     "tsv_file = open('../../data/aida-conll-yago-dataset/AIDA-YAGO2-DATASET.tsv')\n",
     "read_tsv = csv.reader(tsv_file, delimiter=\"\\t\")\n",
