--- a/notebooks/EDA/EDA_aida-conll-yago.ipynb
+++ b/notebooks/EDA/EDA_aida-conll-yago.ipynb
@@ -88,6 +88,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note:** `wikipedia_ID` in ACY corresponds to `page_id` in KWNLP."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
