Finalize wikipedia2vec pipeline; Update basic_pipeline to run over full_mention; Refresh EDA notebooks

--- a/notebooks/EDA/explore_wikipedia2vec.ipynb
+++ b/notebooks/EDA/explore_wikipedia2vec.ipynb
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -499,8 +499,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -519,15 +521,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.5 s, sys: 5.4 s, total: 8.9 s\n",
-      "Wall time: 16.3 s\n"
+      "<Entity Harvard University>\n",
+      "<class 'wikipedia2vec.dictionary.Entity'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Retrieve an entity\n",
+    "print(wiki2vec.get_entity('Harvard University'))\n",
+    "print(type(wiki2vec.get_entity('Metropolitan Museum')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3.92 s, sys: 4.1 s, total: 8.02 s\n",
+      "Wall time: 15.4 s\n"
      ]
     },
     {
@@ -539,13 +563,103 @@
        " (<Entity Yoda>, 0.7504513),\n",
        " (<Word yularen>, 0.74208754),\n",
        " (<Word saesee>, 0.7390899),\n",
-       " (<Word jedi>, 0.7362623),\n",
+       " (<Word jedi>, 0.7362622),\n",
        " (<Word sidious>, 0.73391825),\n",
        " (<Word anakin>, 0.7304383),\n",
-       " (<Word zarbon>, 0.7281125)]"
+       " (<Word zarbon>, 0.7281125),\n",
+       " (<Word ackbar>, 0.7240917),\n",
+       " (<Word watto>, 0.7238953),\n",
+       " (<Word unduli>, 0.7219176),\n",
+       " (<Word numberman>, 0.7216795),\n",
+       " (<Word yarael>, 0.7216082),\n",
+       " (<Word mystel>, 0.7211916),\n",
+       " (<Word kaito>, 0.7205416),\n",
+       " (<Word vilmarh>, 0.7194575),\n",
+       " (<Word threepio>, 0.71926695),\n",
+       " (<Word solusar>, 0.7167008),\n",
+       " (<Word echuu>, 0.71605474),\n",
+       " (<Word yoshi>, 0.71546626),\n",
+       " (<Word jorus>, 0.715434),\n",
+       " (<Entity X'Ting>, 0.71265334),\n",
+       " (<Word joruus>, 0.71257347),\n",
+       " (<Entity Qui-Gon Jinn>, 0.71158594),\n",
+       " (<Word 3po>, 0.71024007),\n",
+       " (<Word jabba>, 0.70992076),\n",
+       " (<Word pandabubba>, 0.70945776),\n",
+       " (<Word ghaleon>, 0.7088256),\n",
+       " (<Entity C-3PO>, 0.70879513),\n",
+       " (<Word yaddle>, 0.70696616),\n",
+       " (<Word benjirou>, 0.7062665),\n",
+       " (<Word dagobah>, 0.7049252),\n",
+       " (<Word yajirobe>, 0.7042612),\n",
+       " (<Entity Mace Windu>, 0.70330495),\n",
+       " (<Word takeshi>, 0.701803),\n",
+       " (<Word wishmaker>, 0.7016454),\n",
+       " (<Word goutetsu>, 0.7015391),\n",
+       " (<Word calrissian>, 0.700937),\n",
+       " (<Word luffy>, 0.7008289),\n",
+       " (<Word goku>, 0.7001841),\n",
+       " (<Word asajj>, 0.69976586),\n",
+       " (<Word kimijima>, 0.69953686),\n",
+       " (<Entity List of Cowboy Bebop characters#Jet Black>, 0.6984393),\n",
+       " (<Word shinichi>, 0.69780266),\n",
+       " (<Word saleucami>, 0.6976341),\n",
+       " (<Word kadokura>, 0.69756985),\n",
+       " (<Word jonouchi>, 0.69744647),\n",
+       " (<Word kaisuke>, 0.69723153),\n",
+       " (<Word obi>, 0.6968853),\n",
+       " (<Word kouji>, 0.6965228),\n",
+       " (<Word tiin>, 0.6960073),\n",
+       " (<Word tenjuro>, 0.69595736),\n",
+       " (<Word shouhei>, 0.6954689),\n",
+       " (<Word utahoshi>, 0.6951125),\n",
+       " (<Word aayla>, 0.6948383),\n",
+       " (<Word nightbrother>, 0.6947813),\n",
+       " (<Word ryo>, 0.69388497),\n",
+       " (<Word lamunade>, 0.69372207),\n",
+       " (<Word vader>, 0.6929206),\n",
+       " (<Word buraiking>, 0.69271183),\n",
+       " (<Word boushh>, 0.6919546),\n",
+       " (<Word pikkon>, 0.6918757),\n",
+       " (<Word kotaro>, 0.69174206),\n",
+       " (<Word avdol>, 0.69173867),\n",
+       " (<Word makuro>, 0.69162965),\n",
+       " (<Word muunilinst>, 0.69130003),\n",
+       " (<Word itsuji>, 0.69103235),\n",
+       " (<Entity Obi-Wan Kenobi>, 0.6908472),\n",
+       " (<Word luminara>, 0.690564),\n",
+       " (<Word fukuide>, 0.6905604),\n",
+       " (<Word hatenko>, 0.690179),\n",
+       " (<Word luuke>, 0.6900398),\n",
+       " (<Word wataru>, 0.68998224),\n",
+       " (<Word raidō>, 0.6899461),\n",
+       " (<Word eekway>, 0.68979466),\n",
+       " (<Word pipotchi>, 0.68974864),\n",
+       " (<Word chewbaboy>, 0.68973744),\n",
+       " (<Word praxeum>, 0.68868935),\n",
+       " (<Entity Jedi#Rank structure>, 0.68857116),\n",
+       " (<Word kubariet>, 0.688451),\n",
+       " (<Word tendou>, 0.68831927),\n",
+       " (<Word dooku>, 0.68821967),\n",
+       " (<Word matsuhiro>, 0.6876099),\n",
+       " (<Word gosterro>, 0.6875092),\n",
+       " (<Word buriburizaemon>, 0.68750566),\n",
+       " (<Entity Star Wars Racer Revenge>, 0.686929),\n",
+       " (<Word jouji>, 0.6864088),\n",
+       " (<Word tarosuke>, 0.68634504),\n",
+       " (<Word cybuster>, 0.68576837),\n",
+       " (<Word zuckuss>, 0.68561566),\n",
+       " (<Word jheese>, 0.68535066),\n",
+       " (<Word hiro>, 0.6849714),\n",
+       " (<Word iwagoro>, 0.6846497),\n",
+       " (<Word brakiss>, 0.684547),\n",
+       " (<Word tauntaun>, 0.68446106),\n",
+       " (<Word roboboss>, 0.68431675),\n",
+       " (<Word wesell>, 0.6840966),\n",
+       " (<Entity R2-D2>, 0.6838638)]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,38 +668,39 @@
     "%%time\n",
     "\n",
     "# Get most similar word\n",
-    "wiki2vec.most_similar(wiki2vec.get_word('yoda'), 10)"
+    "similar_yoda = wiki2vec.most_similar(wiki2vec.get_word('yoda'), 100)\n",
+    "similar_yoda"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.04 s, sys: 1.65 s, total: 4.69 s\n",
-      "Wall time: 4.29 s\n"
+      "CPU times: user 3.1 s, sys: 1.49 s, total: 4.59 s\n",
+      "Wall time: 4.52 s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[(<Entity Harvard University>, 1.0),\n",
-       " (<Entity John F. Kennedy School of Government>, 0.8138498),\n",
+       "[(<Entity Harvard University>, 1.0000001),\n",
+       " (<Entity John F. Kennedy School of Government>, 0.81384987),\n",
        " (<Word harvard>, 0.80841565),\n",
-       " (<Entity Harvard College>, 0.7746781),\n",
-       " (<Entity Signet society>, 0.7537585),\n",
-       " (<Entity List of Harvard College freshman dormitories>, 0.74427927),\n",
-       " (<Entity Harvard Faculty of Arts and Sciences>, 0.7426084),\n",
-       " (<Entity Radcliffe Institute for Advanced Study>, 0.74159557),\n",
-       " (<Entity Harvard Society of Fellows>, 0.7386712),\n",
+       " (<Entity Harvard College>, 0.7746782),\n",
+       " (<Entity Signet society>, 0.75375855),\n",
+       " (<Entity List of Harvard College freshman dormitories>, 0.7442793),\n",
+       " (<Entity Harvard Faculty of Arts and Sciences>, 0.7426085),\n",
+       " (<Entity Radcliffe Institute for Advanced Study>, 0.7415956),\n",
+       " (<Entity Harvard Society of Fellows>, 0.7386711),\n",
        " (<Entity Cambridge, Massachusetts>, 0.73181486)]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +709,49 @@
     "%%time\n",
     "\n",
     "# Get most similar entity\n",
-    "wiki2vec.most_similar(wiki2vec.get_entity('Harvard University'), 10)"
+    "similar_harvard = wiki2vec.most_similar(wiki2vec.get_entity('Harvard University'), 10)\n",
+    "similar_harvard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from wikipedia2vec.dictionary import Entity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(<Entity Yoda>, 0.7504513),\n",
+       " (<Entity X'Ting>, 0.71265334),\n",
+       " (<Entity Qui-Gon Jinn>, 0.71158594)]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Retrieve only entities from word\n",
+    "yoda_entities = []\n",
+    "for i in similar_yoda:\n",
+    "#     print(type(i[0]))\n",
+    "    if isinstance(i[0], Entity):\n",
+    "        yoda_entities.append(i)\n",
+    "    if len(yoda_entities) == 3:\n",
+    "        break\n",
+    "yoda_entities"
    ]
   },
   {
@@ -751,9 +908,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ac297r",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ac297r"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -765,7 +922,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
