Update notebooks with recent additions

--- a/notebooks/EDA/explore_wikipedia2vec.ipynb
+++ b/notebooks/EDA/explore_wikipedia2vec.ipynb
@@ -543,7 +543,7 @@
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
