--- a/notebooks/demos/wikipedia2vec_pipeline.ipynb
+++ b/notebooks/demos/wikipedia2vec_pipeline.ipynb
@@ -4040,6 +4040,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Word german>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(<Word german>, 0.9999999),\n",
+       " (<Word austrian>, 0.78725725),\n",
+       " (<Word scharfschütze>, 0.7308491),\n",
+       " (<Word badeners>, 0.7266695),\n",
+       " (<Word bavarian>, 0.7198452),\n",
+       " (<Word krupkat>, 0.71838105),\n",
+       " (<Word hungarian>, 0.7170497),\n",
+       " (<Word polish>, 0.7153468),\n",
+       " (<Word brandenburgish>, 0.70786846),\n",
+       " (<Word deutscher>, 0.70706606),\n",
+       " (<Word germany>, 0.70623004),\n",
+       " (<Word saarlander>, 0.70333624),\n",
+       " (<Word graßhoff>, 0.6995439),\n",
+       " (<Word hochdeutsche>, 0.69730175),\n",
+       " (<Word krämer>, 0.69445467)]"
+      ]
+     },
+     "execution_count": 245,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word = wiki2vec.get_word('german')\n",
+    "print(word)\n",
+    "similar = wiki2vec.most_similar(word, 15)\n",
+    "similar"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 214,
    "metadata": {},
    "outputs": [
@@ -4075,6 +4119,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Word british>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(<Word british>, 1.0),\n",
+       " (<Word canadian>, 0.67067295),\n",
+       " (<Word britiah>, 0.6659233),\n",
+       " (<Word bccss>, 0.6586777),\n",
+       " (<Word indian>, 0.6507589),\n",
+       " (<Word sherifian>, 0.64807105),\n",
+       " (<Word june1976>, 0.6399809),\n",
+       " (<Word french>, 0.6398979),\n",
+       " (<Word kinematography>, 0.63943684),\n",
+       " (<Word uk>, 0.6366696),\n",
+       " (<Word june1952>, 0.6361386),\n",
+       " (<Word britain>, 0.63085485),\n",
+       " (<Word scottish>, 0.6276721),\n",
+       " (<Word english>, 0.6249712),\n",
+       " (<Word australian>, 0.62427443)]"
+      ]
+     },
+     "execution_count": 244,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word = wiki2vec.get_word('british')\n",
+    "print(word)\n",
+    "similar = wiki2vec.most_similar(word, 15)\n",
+    "similar"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 219,
    "metadata": {},
    "outputs": [
@@ -4101,6 +4189,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Word chinese>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(<Word chinese>, 0.99999994),\n",
+       " (<Word taiwanese>, 0.8492823),\n",
+       " (<Word shanghaiese>, 0.7907475),\n",
+       " (<Word qing>, 0.77963746),\n",
+       " (<Word hunanese>, 0.7794873),\n",
+       " (<Word hakka>, 0.77733415),\n",
+       " (<Word cantonese>, 0.7768239),\n",
+       " (<Word guangdong>, 0.7717895),\n",
+       " (<Word vietnamese>, 0.77159965),\n",
+       " (<Word yue>, 0.77143973),\n",
+       " (<Word shanghainese>, 0.76614934),\n",
+       " (<Word 汉>, 0.76601386),\n",
+       " (<Word fujianese>, 0.7653477),\n",
+       " (<Word china>, 0.76098335),\n",
+       " (<Word yixiang>, 0.7601845)]"
+      ]
+     },
+     "execution_count": 243,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word = wiki2vec.get_word('chinese')\n",
+    "print(word)\n",
+    "similar = wiki2vec.most_similar(word, 15)\n",
+    "similar"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4109,28 +4241,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy.spatial import distance"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1915842890739441"
+      ]
+     },
+     "execution_count": 275,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distance.cosine(wiki2vec.get_entity_vector('Harvard University'), wiki2vec.get_word_vector('harvard'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.40195798873901367"
+      ]
+     },
+     "execution_count": 276,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distance.cosine(wiki2vec.get_entity_vector('Germany'), wiki2vec.get_word_vector('german'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 277,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6703794002532959"
+      ]
+     },
+     "execution_count": 277,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distance.cosine(wiki2vec.get_entity_vector('Germany'), wiki2vec.get_word_vector('british'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7592576742172241"
+      ]
+     },
+     "execution_count": 278,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distance.cosine(wiki2vec.get_entity_vector('South Africa'), wiki2vec.get_word_vector('chinese'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "# TRASH"
+    "from sklearn.metrics.pairwise import cosine_similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.80841565]], dtype=float32)"
+      ]
+     },
+     "execution_count": 284,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cosine_similarity(wiki2vec.get_entity_vector('Harvard University').reshape(1, -1), wiki2vec.get_word_vector('harvard').reshape(1, -1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 285,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.598042]], dtype=float32)"
+      ]
+     },
+     "execution_count": 285,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cosine_similarity(wiki2vec.get_entity_vector('Germany').reshape(1, -1), wiki2vec.get_word_vector('german').reshape(1, -1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.4630968]], dtype=float32)"
+      ]
+     },
+     "execution_count": 293,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cosine_similarity(wiki2vec.get_entity_vector('England').reshape(1, -1), wiki2vec.get_word_vector('british').reshape(1, -1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.24074233]], dtype=float32)"
+      ]
+     },
+     "execution_count": 289,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cosine_similarity(wiki2vec.get_entity_vector('South Africa').reshape(1, -1), wiki2vec.get_word_vector('chinese').reshape(1, -1))"
    ]
   },
   {
@@ -4218,46 +4502,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [
+    "# Reference Archive - No Need to Review"
+   ]
   },
   {
    "cell_type": "code",
